adds Dockerfile, docker-compose.yml, requirements.txt and changes the code a bit to make it more compatible with docker

--- a/rss2newsletter.conf
+++ b/rss2newsletter.conf
@@ -1,6 +1,6 @@
 [FEED]
 # Full URL to your website's feed
-URL = https://elliotonsecurity.com/atom.xml
+URL = YOUR_FEED_URL
 
 # How often to check for new feed entries in seconds
 POLL_INTERVAL = 300
@@ -14,7 +14,7 @@ PROCESSED_ENTRIES_FILE = processed_entries.txt
 URL = http://localhost:9000
 
 # Credentials
-USERNAME = ElliotKillick
+USERNAME = YOUR_USERNAME
 PASSWORD = YOUR_PASSWORD
 
 # The ID of your "rss2newsletter" list (create this list in listmonk)
