--- a/rss2newsletter.conf
+++ b/rss2newsletter.conf
@@ -6,7 +6,7 @@ URL = YOUR_FEED_URL
 POLL_INTERVAL = 300
 
 # rss2newsletter uses this file to keep track of new feed entries
-PROCESSED_ENTRIES_FILE = processed_entries.txt
+PROCESSED_ENTRIES_FILE = data/processed_entries.txt
 
 
 [LISTMONK]
